# airflow-lighthouse-aula-pratica

./: .gitignore  Makefile  README.md  logs.sh  pyproject.toml  reset.sh  start.sh  stop.sh
dags/: 1-dag_variables_operator.py  dag_config_example.py  dag_docker_operator_example.py  dag_pipeline_simples.py  dag_taskflow_xcom.py  dag_variables_from_env.py  dag_variables_via_ui.py
dags/utils/: messages.py
infra/: docker-compose.yml
utils/: config.py  env.py
